--- a/templates/ejercicio2.html
+++ b/templates/ejercicio2.html
@@ -4,7 +4,7 @@
 
 {% block container %}
 <div class="formulario-1">
-    <h1>Formulario de Notas</h1>
+    <h1>Inicio de sesión</h1>
     <form action="/ejercicio2" method="POST">
         <label for="nombre">Nombre :</label>
         <input type="text" id="nombre" name="nombre" required>
